--- a/css/main.css
+++ b/css/main.css
@@ -114,3 +114,121 @@
     .text-muted {
         margin-top: 10px;
     }
+    
+    .upcoming-events {
+        top: 0;
+        left: 0;
+        width: 30vw;
+    }
+    
+    @media screen {
+        body>div#left-sidebar {
+            position: fixed;
+        }
+    }
+    
+    .list1 {
+        position: relative;
+        display: block;
+        width: 100%;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+        text-shadow: rgba(0, 0, 0, 0.75) 1px 1px 5px;
+        -webkit-border-radius: 1px;
+        -moz-border-radius: 1px;
+        border-radius: 1px;
+        border: 1px solid transparent;
+        background: #00679a;
+        list-style: none;
+    }
+    
+    .list1 li {
+        position: relative;
+        border: 1px solid #43a9dd;
+        border-bottom-color: transparent;
+        margin: 0px 0px 1px 0px;
+        padding: 6px 9px 9px 9px;
+        background-color: #0d87c4;
+        background-image: -moz-linear-gradient(top, #057db9, #1996d5);
+        background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#057db9), to(#1996d5));
+        background-image: -webkit-linear-gradient(top, #057db9, #1996d5);
+        background-image: -o-linear-gradient(top, #057db9, #1996d5);
+        background-image: linear-gradient(to bottom, #057db9, #1996d5);
+        background-repeat: repeat-x;
+        filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#ff057db9', endColorstr='#ff1996d5', GradientType=0);
+    }
+    
+    .list1 li:first-child {
+        margin-top: 0px;
+        background-color: #0981be;
+        background-image: -moz-linear-gradient(top, #057db9, #0e88c5);
+        background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#057db9), to(#0e88c5));
+        background-image: -webkit-linear-gradient(top, #057db9, #0e88c5);
+        background-image: -o-linear-gradient(top, #057db9, #0e88c5);
+        background-image: linear-gradient(to bottom, #057db9, #0e88c5);
+        background-repeat: repeat-x;
+        filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#ff057db9', endColorstr='#ff0e88c5', GradientType=0);
+    }
+    
+    .list1 li:first-child + li {
+        background-color: #128ecb;
+        background-image: -moz-linear-gradient(top, #0e88c5, #1996d5);
+        background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0e88c5), to(#1996d5));
+        background-image: -webkit-linear-gradient(top, #0e88c5, #1996d5);
+        background-image: -o-linear-gradient(top, #0e88c5, #1996d5);
+        background-image: linear-gradient(to bottom, #0e88c5, #1996d5);
+        background-repeat: repeat-x;
+        filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#ff0e88c5', endColorstr='#ff1996d5', GradientType=0);
+    }
+    
+    .list1 li:first-child + li + li {
+        background-color: #1490ce;
+        background-image: -moz-linear-gradient(top, #1996d5, #0d87c4);
+        background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#1996d5), to(#0d87c4));
+        background-image: -webkit-linear-gradient(top, #1996d5, #0d87c4);
+        background-image: -o-linear-gradient(top, #1996d5, #0d87c4);
+        background-image: linear-gradient(to bottom, #1996d5, #0d87c4);
+        background-repeat: repeat-x;
+        filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#ff1996d5', endColorstr='#ff0d87c4', GradientType=0);
+    }
+    
+    .list1 li:first-child + li + li + li {
+        background-color: #0a83c0;
+        background-image: -moz-linear-gradient(top, #0d87c4, #057db9);
+        background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0d87c4), to(#057db9));
+        background-image: -webkit-linear-gradient(top, #0d87c4, #057db9);
+        background-image: -o-linear-gradient(top, #0d87c4, #057db9);
+        background-image: linear-gradient(to bottom, #0d87c4, #057db9);
+        background-repeat: repeat-x;
+        filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#ff0d87c4', endColorstr='#ff057db9', GradientType=0);
+    }
+    
+    .list1 li.last {
+        border-bottom-color: #43a9dd;
+        padding-bottom: 22px;
+        margin-bottom: 0;
+    }
+    
+    .list1 li div {
+        overflow: hidden;
+    }
+    
+    .list1 li div h3 {
+        color: #ffffff;
+        margin: 9px 0 7px;
+    }
+    
+    .list1 li div h3 a {
+        color: inherit;
+    }
+    
+    .list1 li div h3 a:hover {
+        color: #000000;
+    }
+    
+    .list1 li div p {
+        color: #c8c8c8;
+        padding: 0;
+        margin: 0;
+    }
