Resized Mobile "Upcoming Events"
Enlarged and centered the "Upcoming Events" section of the homepage on smaller screens.

--- a/css/main.css
+++ b/css/main.css
@@ -223,6 +223,6 @@
             display: none;
         }
         .upcoming-events {
-            width: 80vw;
+            width: 100%;
         }
     }
