Added Social Media to Sidebar
Added links to Google and Facebook pages to homepage sidebar, and added Font Awesome

--- a/css/main.css
+++ b/css/main.css
@@ -317,3 +317,9 @@
     #random-photo {
         padding: 10px;
     }
+    
+    .fa-google,
+    .fa-facebook-square {
+        color: snow;
+        padding: 10px;
+    }
