--- a/css/main.css
+++ b/css/main.css
@@ -323,3 +323,18 @@
         color: snow;
         padding: 10px;
     }
+    
+    .google-maps {
+        position: relative;
+        padding-bottom: 93vh; // (450 ÷ 500 = 0.9 = 90%)
+        height: 0;
+        overflow: hidden;
+    }
+    
+    .google-maps iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 90vh;
+    }
