--- a/css/main.css
+++ b/css/main.css
@@ -338,3 +338,28 @@
         width: 100%;
         height: 90vh;
     }
+    
+    .contact-columns {
+        text-align: center;
+        width: 100%;
+    }
+    
+    .contact-circle {
+        width: 140px;
+        height: 140px;
+        -moz-border-radius: 70px;
+        -webkit-border-radius: 70px;
+        border-radius: 70px;
+        background-color: #080808;
+        border: 2px solid snow;
+        position: relative;
+        display: table;
+        margin: 0 auto;
+    }
+    
+    .contact-icon {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
