--- a/templates/browse.html
+++ b/templates/browse.html
@@ -1,211 +1,235 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>{{.Name}}</title>
+
+<head>
+    <title>Bulletin Archive - Immaculate Conception Church</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Browse our collection of bulletins from the past.">
+    <link rel="icon" href="/img/church-favicon.png">
+    <link rel="stylesheet" href="/css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    html {
-      color: #111;
-      font-size: 1em;
-      font-family: sans-serif;
-    }
-
-    body {
-      padding: 5px;
-    }
-
-    a {
-      text-decoration: none;
-      color: #111;
-    }
-
-    a:hover {
-      color: #333;
-    }
-
-    header h1 {
-      word-break: break-word;
-    }
-
-    header,
-    main {
-      margin: 0 auto;
-      max-width: 920px;
-    }
-
-    main {
-      padding-top: 20px;
-    }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-    }
-
-    tr {
-      outline: 0;
-      border: 0;
-    }
-
-    tr:hover td {
-      background: #f6f6f6;
-    }
-
-    th {
-      text-align: left;
-      padding-right: 20px;
-      padding-bottom: .5em;
-    }
-
-    .col-icon {
-      width: 1em;
-    }
-
-    tr td:nth-child(2) {
-     padding-right: 2px;
-    }
-
-    tr th:nth-child(4),
-    tr td:nth-child(4) {
-     display: none;
-    }
-
-    tr td:first-of-type {
-      padding-right: 10px;
-    }
-
-    td {
-      cursor: pointer;
-      padding: 10px 0;
-      outline: 0;
-      border: 0;
-      border-bottom: 1px solid #edf1f5;
-      vertical-align: middle;
-      text-align: left;
-      transition:background 300ms ease;
-    }
-
-
-    /* Mobile first */
-
-    /* --- >= smartphones landscape --- */
-    @media screen and (min-width: 480px) {
-      tr th:nth-child(4),
-      tr td:nth-child(4) {
-       display: table-cell;
-      }
-    }
-
-    /* --- >= tablets portrait --- */
-    @media screen and (min-width: 768px) {
-
-    }
-
-    /* --- >= tablets landscape --- */
-    @media screen and (min-width: 1024px) {
-
-    }
-
-    /* --- >= desktop --- */
-    @media screen and (min-width: 1180px) {
-      td {
-      padding: 4px 0;
-      }
-    }
-
-    /* --- >= desktop big --- */
-    @media screen and (min-width: 1300px) {
-
-    }
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        
+        html {
+            color: snow;
+            font-size: 1em;
+            font-family: 'Raleway', sans-serif;
+        }
+        
+        body {
+            padding: 5px;
+        }
+        
+        a {
+            text-decoration: none;
+            color: snow;
+        }
+        
+        a:hover {
+            color: gainsboro;
+        }
+        
+        header h1 {
+            word-break: break-word;
+        }
+        
+        header,
+        main {
+            margin: 0 auto;
+            max-width: 920px;
+        }
+        
+        main {
+            padding-top: 20px;
+        }
+        
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        
+        tr {
+            outline: 0;
+            border: 0;
+        }
+        
+        tr:hover td {
+            background: rgb(100, 100, 100);
+        }
+        
+        th {
+            text-align: left;
+            padding-right: 20px;
+            padding-bottom: .5em;
+        }
+        
+        .col-icon {
+            width: 1em;
+        }
+        
+        tr td:nth-child(2) {
+            padding-right: 2px;
+        }
+        
+        tr th:nth-child(4),
+        tr td:nth-child(4) {
+            display: none;
+        }
+        
+        tr td:first-of-type {
+            padding-right: 10px;
+        }
+        
+        td {
+            cursor: pointer;
+            padding: 10px 0;
+            outline: 0;
+            border: 0;
+            border-bottom: 1px solid #edf1f5;
+            vertical-align: middle;
+            text-align: left;
+            transition: background 300ms ease;
+        }
+        /* Mobile first */
+        /* --- >= smartphones landscape --- */
+        
+        @media screen and (min-width: 480px) {
+            tr th:nth-child(4),
+            tr td:nth-child(4) {
+                display: table-cell;
+            }
+        }
+        /* --- >= tablets portrait --- */
+        
+        @media screen and (min-width: 768px) {}
+        /* --- >= tablets landscape --- */
+        
+        @media screen and (min-width: 1024px) {}
+        /* --- >= desktop --- */
+        
+        @media screen and (min-width: 1180px) {
+            td {
+                padding: 4px 0;
+            }
+        }
+        /* --- >= desktop big --- */
+        
+        @media screen and (min-width: 1300px) {}
     </style>
-  </head>
-  <body>
+</head>
+
+<body>
     <header>
-      <h1>{{range $url, $name := .BreadcrumbMap}}<a href="{{$url}}">{{$name}}</a>{{if ne $url "/"}}/{{end}}{{end}}</h1>
+        <div class="row branding-header">
+            <div class="col-md-3 brand-left"><img class="brand" src="/img/church-logo.svg" alt="Immaculate Conception Logo"></div>
+            <div class="col-md-6">
+                <div class="brand-txt">
+                    <h1>Immaculate Conception Church</h1>
+                    <h2>Millhousen, Indiana</h2> </div>
+            </div>
+            <div class="col-md-3 brand-right">
+                <div class="quick-info">
+                    <ul>
+                        <li>PLC: Sister Donna Prickel</li>
+                        <li id="mass">Mass: Sunday at 8 AM</li>
+                        <li><a href="tel:8125912362">(812) 591-2362</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </header>
-    <main>
-      <table>
-        <tr>
-          <th class="col-icon"></th>
-          <th class="col-name">
-            {{if and (eq .Sort "name") (ne .Order "desc")}}
-            <a href="?sort=name&order=desc">Name &#9650;</a>
-            {{else if and (eq .Sort "name") (ne .Order "asc")}}
-            <a href="?sort=name&order=asc">Name &#9660;</a>
-            {{else}}
-            <a href="?sort=name&order=asc">Name</a>
-            {{end}}
-          </th>
-          <th class="col-size">
-            {{if and (eq .Sort "size") (ne .Order "desc")}}
-            <a href="?sort=size&order=desc">Size &#9650;</a>
-            {{else if and (eq .Sort "size") (ne .Order "asc")}}
-            <a href="?sort=size&order=asc">Size &#9660;</a>
-            {{else}}
-            <a href="?sort=size&order=asc">Size</a>
-            {{end}}
-          </th>
-          <th class="col-time">
-            {{if and (eq .Sort "time") (ne .Order "desc")}}
-            <a href="?sort=time&order=desc">Modified &#9650;</a>
-            {{else if and (eq .Sort "time") (ne .Order "asc")}}
-            <a href="?sort=time&order=asc">Modified &#9660;</a>
-            {{else}}
-            <a href="?sort=time&order=asc">Modified</a>
-            {{end}}
-          </th>
-        </tr>
-      {{if .CanGoUp}}
-        <tr>
-          <td>
-            <svg height="16" width="12" xmlns="http://www.w3.org/2000/svg"><path d="M6 2.5l-6 4.5 6 4.5v-3c1.73 0 5.14 0.95 6 4.38 0-4.55-3.06-7.05-6-7.38v-3z" /></svg>
-          </td>
-          <td>
-            <a href=".." class="up" title="Up one level">..</a>
-          </td>
-          <td></td>
-          <td></td>
-        </tr>
-      {{end}}
-        {{range .Items}}
-        <tr>
-          <td>
-            {{if .IsDir}}<svg height="16" width="14" xmlns="http://www.w3.org/2000/svg"><path d="M13 4H7v-1c0-0.66-0.31-1-1-1H1c-0.55 0-1 0.45-1 1v10c0 0.55 0.45 1 1 1h12c0.55 0 1-0.45 1-1V5c0-0.55-0.45-1-1-1z m-7 0H1v-1h5v1z" /></svg>
-            {{else}}<svg height="16" width="12" xmlns="http://www.w3.org/2000/svg"><path d="M6 5H2v-1h4v1zM2 8h7v-1H2v1z m0 2h7v-1H2v1z m0 2h7v-1H2v1z m10-7.5v9.5c0 0.55-0.45 1-1 1H1c-0.55 0-1-0.45-1-1V2c0-0.55 0.45-1 1-1h7.5l3.5 3.5z m-1 0.5L8 2H1v12h10V5z" /></svg>{{end}}
-          </td>
-          <td>
-            <a href="{{.URL}}" class="name">{{.Name}}</a>
-          </td>
-          <td>{{if not .IsDir}}{{.HumanSize}}{{end}}</td>
-          <td>{{.HumanModTime "02.01.2006 15:04:05"}}</td>
-        </tr>
-        {{end}}
-      </table>
-    </main>
-    <script>
+    <div class="etched-pattern">
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="nav">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
+                </div>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li>
+                        <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="/about/staff/">Staff</a></li>
+                                <li><a href="/about/lay-leadership/">Lay Leadership</a></li>
+                                <li><a href="/about/history/">Parish History</a></li>
+                                <li><a href="javascript:void(0);" onclick="$('#mass').animateCss('wobble');">Mass</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li><a href="/about/directions/">Directions</a></li>
+                                <li><a href="/about/contact/">Contact</a></li>
+                            </ul>
+                        </li>
+                        <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Faith Formation <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="/faith-formation/elementary/">Pre-K thru 5th Grade</a></li>
+                                <li><a href="/faith-formation/high-school/">6th thru 12th Grade</a></li>
+                                <li><a href="/faith-formation/adult/">Adult Education</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li><a href="/faith-formation/rcia/">RCIA</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="/sacraments/">Sacraments</a></li>
+                        <li><a href="/calendar/">Events Calendar</a></li>
+                        <li><a href="/bulletins/">Bulletins</a></li>
+                        <li><a href="/ministry-schedule/">Ministry Schedule</a></li>
+                    </ul>
+                </div>
+                <!-- /.navbar-collapse -->
+            </div>
+            <!-- /.container-fluid -->
+        </nav>
+        <main>
+            <table>
+                <tr>
+                    <th class="col-icon"></th>
+                    <th class="col-name"> {{if and (eq .Sort "name") (ne .Order "desc")}} <a href="?sort=name&order=desc">Name &#9650;</a> {{else if and (eq .Sort "name") (ne .Order "asc")}} <a href="?sort=name&order=asc">Name &#9660;</a> {{else}} <a href="?sort=name&order=asc">Name</a> {{end}} </th>
+                    <th class="col-size"> {{if and (eq .Sort "size") (ne .Order "desc")}} <a href="?sort=size&order=desc">Size &#9650;</a> {{else if and (eq .Sort "size") (ne .Order "asc")}} <a href="?sort=size&order=asc">Size &#9660;</a> {{else}} <a href="?sort=size&order=asc">Size</a> {{end}} </th>
+                    <th class="col-time"> {{if and (eq .Sort "time") (ne .Order "desc")}} <a href="?sort=time&order=desc">Modified &#9650;</a> {{else if and (eq .Sort "time") (ne .Order "asc")}} <a href="?sort=time&order=asc">Modified &#9660;</a> {{else}} <a href="?sort=time&order=asc">Modified</a> {{end}} </th>
+                </tr> {{if .CanGoUp}}
+                <tr>
+                    <td>
+                        <svg height="16" width="12" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M6 2.5l-6 4.5 6 4.5v-3c1.73 0 5.14 0.95 6 4.38 0-4.55-3.06-7.05-6-7.38v-3z" /> </svg>
+                    </td>
+                    <td> <a href=".." class="up" title="Up one level">..</a> </td>
+                    <td></td>
+                    <td></td>
+                </tr> {{end}} {{range .Items}}
+                <tr>
+                    <td> {{if .IsDir}}
+                        <svg height="16" width="14" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M13 4H7v-1c0-0.66-0.31-1-1-1H1c-0.55 0-1 0.45-1 1v10c0 0.55 0.45 1 1 1h12c0.55 0 1-0.45 1-1V5c0-0.55-0.45-1-1-1z m-7 0H1v-1h5v1z" /> </svg> {{else}}
+                        <svg height="16" width="12" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M6 5H2v-1h4v1zM2 8h7v-1H2v1z m0 2h7v-1H2v1z m0 2h7v-1H2v1z m10-7.5v9.5c0 0.55-0.45 1-1 1H1c-0.55 0-1-0.45-1-1V2c0-0.55 0.45-1 1-1h7.5l3.5 3.5z m-1 0.5L8 2H1v12h10V5z" /> </svg>{{end}} </td>
+                    <td> <a href="{{.URL}}" class="name">{{.Name}}</a> </td>
+                    <td>{{if not .IsDir}}{{.HumanSize}}{{end}}</td>
+                    <td>{{.HumanModTime "02.01.2006 15:04:05"}}</td>
+                </tr> {{end}} </table>
+        </main>
+        <script>
+            var rows = document.getElementsByTagName('tr');
+            var max = rows.length;
+            var index;
+            for (index = 1; index < max; index++) {
+                rows[index].onclick = function (event) {
+                    if (event.which == 1) {
+                        location.href = this.getElementsByTagName('a')[0].getAttribute('href');
+                    }
+                    if (event.which == 2) {
+                        window.open(this.getElementsByTagName('a')[0].getAttribute('href'));
+                    }
+                }
+            }
+        </script>
+</body>
 
-    var rows = document.getElementsByTagName('tr');
-    var max = rows.length;
-    var index;
-
-    for(index = 1; index < max; index++) {
-      rows[index].onclick = function(event) {
-        if( event.which == 1 ) {
-          location.href = this.getElementsByTagName('a')[0].getAttribute('href');
-        }
-        if( event.which == 2 ) {
-          window.open(this.getElementsByTagName('a')[0].getAttribute('href'));
-        }
-      }
-    }
-    </script>
-  </body>
 </html>
