--- a/css/main.css
+++ b/css/main.css
@@ -1,24 +1,15 @@
     body {
         color: snow;
         font-family: 'Raleway', serif;
-        background-image: url(/img/content_bg.jpg);
-        width: 100vw;
+        background-color: #0B3954;
+        width: 100%;
         overflow-x: hidden;
-    }
-    
-    nav {
-        border: 0px 0px 0px 0px;
-        width: 100vw;
-    }
-    
-    .etched-pattern {
-        width: 100vw;
     }
     
     .branding-header {
         background-color: #080808;
-        color: #9D9D9D;
-        width: 100vw;
+        color: snow;
+        width: 100%;
         margin: 0px;
     }
     
@@ -34,7 +25,6 @@
         justify-content: center;
         flex-direction: column;
         height: 150px;
-        color: white;
     }
     
     .brand-txt h1 {
@@ -52,23 +42,6 @@
     
     .brand-left {
         padding-left: 0;
-    }
-    
-    .etched-pattern {
-        background-image: url(/img/content_bg.jpg);
-        width: 100%;
-        height: 100%
-    }
-    
-    .jagged-pattern {
-        position: absolute;
-        display: block;
-        top: -5px;
-        left: 0;
-        content: '';
-        width: 100%;
-        height: 5px;
-        background: url(/img/footer_bg.png) center top repeat-x;
     }
     
     .quick-info {
@@ -112,47 +85,7 @@
     .text-muted {
         margin-top: 10px;
     }
-    
-    .upcoming-events {
-        top: 0;
-        left: 0;
-        width: 20vw;
-    }
-    
-    .page-content {
-        margin-left: 20vw;
-        padding-left: 10px;
-    }
-    
-    @media screen and (max-width: 1549px) {
-        .upcoming-events {
-            top: 0;
-            left: 0;
-            width: 25vw;
-        }
-        .page-content {
-            margin-left: 25vw;
-            padding-left: 10px;
-        }
-    }
-    
-    @media screen and (max-width: 1239px) {
-        .upcoming-events {
-            top: 0;
-            left: 0;
-            width: 30vw;
-        }
-        .page-content {
-            margin-left: 30vw;
-            padding-left: 10px;
-        }
-    }
-    
-    @media screen {
-        body>div#left-sidebar {
-            position: fixed;
-        }
-    }
+    /*
     
     .list1 {
         position: relative;
@@ -259,6 +192,17 @@
         color: #c8c8c8;
         padding: 0;
         margin: 0;
+    }
+    */
+    
+    .list1 li {
+        background-color: #333;
+        list-style-type: none;
+        padding: 5px;
+    }
+    
+    .list1 {
+        padding-left: 0px;
     }
     
     @media screen and (max-width: 991px) {
@@ -444,4 +388,117 @@
         margin: 0 auto;
         min-width: 500px;
         max-height: 500px;
+    }
+    
+    .navbar {
+        border-radius: 0px;
+    }
+    /* https://work.smarchal.com/twbscolor/css/0275d80269c2f2f2f2dfdddd1 */
+    
+    .navbar-default {
+        background-color: #1a2930;
+        border-color: #0a1612;
+    }
+    
+    .navbar-default .navbar-brand {
+        color: #c5c1c0;
+    }
+    
+    .navbar-default .navbar-brand:hover,
+    .navbar-default .navbar-brand:focus {
+        color: #f7ce3e;
+    }
+    
+    .navbar-default .navbar-text {
+        color: #c5c1c0;
+    }
+    
+    .navbar-default .navbar-nav > li > a {
+        color: #c5c1c0;
+    }
+    
+    .navbar-default .navbar-nav > li > a:hover,
+    .navbar-default .navbar-nav > li > a:focus {
+        color: #f7ce3e;
+    }
+    
+    .navbar-default .navbar-nav > li > .dropdown-menu {
+        background-color: #1a2930;
+    }
+    
+    .navbar-default .navbar-nav > li > .dropdown-menu > li > a {
+        color: #c5c1c0;
+    }
+    
+    .navbar-default .navbar-nav > li > .dropdown-menu > li > a:hover,
+    .navbar-default .navbar-nav > li > .dropdown-menu > li > a:focus {
+        color: #f7ce3e;
+        background-color: #0a1612;
+    }
+    
+    .navbar-default .navbar-nav > li > .dropdown-menu > li > .divider {
+        background-color: #0a1612;
+    }
+    
+    .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
+    .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
+    .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
+        color: #f7ce3e;
+        background-color: #0a1612;
+    }
+    
+    .navbar-default .navbar-nav > .active > a,
+    .navbar-default .navbar-nav > .active > a:hover,
+    .navbar-default .navbar-nav > .active > a:focus {
+        color: #f7ce3e;
+        background-color: #0a1612;
+    }
+    
+    .navbar-default .navbar-nav > .open > a,
+    .navbar-default .navbar-nav > .open > a:hover,
+    .navbar-default .navbar-nav > .open > a:focus {
+        color: #f7ce3e;
+        background-color: #0a1612;
+    }
+    
+    .navbar-default .navbar-toggle {
+        border-color: #0a1612;
+    }
+    
+    .navbar-default .navbar-toggle:hover,
+    .navbar-default .navbar-toggle:focus {
+        background-color: #0a1612;
+    }
+    
+    .navbar-default .navbar-toggle .icon-bar {
+        background-color: #c5c1c0;
+    }
+    
+    .navbar-default .navbar-collapse,
+    .navbar-default .navbar-form {
+        border-color: #c5c1c0;
+    }
+    
+    .navbar-default .navbar-link {
+        color: #c5c1c0;
+    }
+    
+    .navbar-default .navbar-link:hover {
+        color: #f7ce3e;
+    }
+    
+    @media (max-width: 767px) {
+        .navbar-default .navbar-nav .open .dropdown-menu > li > a {
+            color: #c5c1c0;
+        }
+        .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
+        .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
+            color: #f7ce3e;
+        }
+        .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
+        .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
+        .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
+            color: #f7ce3e;
+            background-color: #0a1612;
+        }
     }
