--- a/css/main.css
+++ b/css/main.css
@@ -84,8 +84,8 @@
         width: 100vw;
         /* Set the fixed height of the footer here */
         height: 40px;
-        background-color: #080808;
-        color: #9D9D9D;
+        background-color: #bcbcbc;
+        color: #000000;
     }
     
     .text-muted {
@@ -490,8 +490,6 @@
         font-weight: 200;
         padding-top: 20px;
         padding-bottom: 20px;
-        padding-left: 10vw;
-        padding-right: 10vw;
         width: 100%;
         text-align: center;
     }
@@ -515,6 +513,11 @@
     
     .mission-statement ul {
         text-align: left;
+    }
+    
+    .mission-statement {
+        padding-left: 10vw;
+        padding-right: 10vw;
     }
     
     .upcoming-events ul {
@@ -580,4 +583,24 @@
     
     .upcoming-events {
         display: inline-block;
+    }
+    
+    .photo-gallery {
+        width: 420px;
+        margin: 0 auto;
+        left: 0;
+        right: 0;
+    }
+    
+    .daily-readings {
+        margin: 0 auto;
+        display: block;
+    }
+    
+    .catholic-search {
+        margin: 0 auto;
+        width: 148px;
+        text-align: center;
+        display: block;
+        position: fixed;
     }
