--- a/css/main.css
+++ b/css/main.css
@@ -91,8 +91,7 @@
     .text-muted {
         margin-top: 10px;
     }
-    
-    @media screen and (max-width: 991px) {
+    /* @media screen and (max-width: 991px) {
         .brand-right {
             display: none;
         }
@@ -103,7 +102,7 @@
         .page-content {
             margin-left: 0vw;
         }
-    }
+    } */
     /*Business Card Css */
     
     .business-card {
@@ -585,6 +584,57 @@
         display: inline-block;
     }
     
+    @media (max-width: 700px) {
+        .upcoming-events ul {
+            width: 90vw;
+            /* change it to whatever you like */
+        }
+        .upcoming-events h4 {
+            font-size: 16px;
+            font-weight: 500;
+        }
+        .date {
+            font-size: 14px;
+            font-weight: 200;
+        }
+    }
+    
+    @media (max-width: 600px) {
+        .upcoming-events ul {
+            width: 90vw;
+            /* change it to whatever you like */
+        }
+        .upcoming-events h4 {
+            font-size: 16px;
+            font-weight: 500;
+        }
+        .date {
+            font-size: 14px;
+            font-weight: 200;
+        }
+        .upcoming-events ul:before,
+        .upcoming-events ul:after {
+            text-align: center;
+            display: block;
+            border: none;
+            border-bottom: 0;
+            width: 100%;
+        }
+        .upcoming-events ul:before {
+            border-right: 0;
+        }
+        .upcoming-events ul:after {
+            top: 0;
+            left: 100%;
+            margin-left: 1px;
+        }
+        .upcoming-events li {
+            width: 100%;
+            border: none;
+            margin-bottom: -1px;
+        }
+    }
+    
     .photo-gallery {
         width: 420px;
         margin: 0 auto;
@@ -603,4 +653,127 @@
         text-align: center;
         display: block;
         position: fixed;
+    }
+    
+    .facebook-embed {
+        border: none;
+        overflow: hidden;
+        height: 450px;
+        width: 420px;
+    }
+    
+    @media (max-width: 1334px) {
+        .brand {
+            height: 100px;
+            padding-left: 10px;
+        }
+        .brand-txt {
+            height: 100px;
+        }
+        .brand-txt h1 {
+            font-size: 3.3em;
+        }
+        .brand-txt h2 {
+            font-size: 1.2em;
+        }
+        .quick-info {
+            height: 100px;
+        }
+        .quick-info li {
+            font-size: 12px;
+        }
+    }
+    
+    @media (max-width: 991px) {
+        .brand-txt {
+            display: flex;
+            text-align: left;
+            justify-content: center;
+            flex-direction: column;
+            height: 100px;
+        }
+        .navbar-header {
+            float: none;
+        }
+        .navbar-toggle {
+            display: block;
+        }
+        .navbar-collapse {
+            border-top: 1px solid transparent;
+            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
+        }
+        .navbar-collapse.collapse {
+            display: none!important;
+        }
+        .navbar-nav {
+            float: none!important;
+            margin: 7.5px -15px;
+        }
+        .navbar-nav>li {
+            float: none;
+        }
+        .navbar-nav>li>a {
+            padding-top: 10px;
+            padding-bottom: 10px;
+        }
+        .navbar-text {
+            float: none;
+            margin: 15px 0;
+        }
+        /* since 3.1.0 */
+        .navbar-collapse.collapse.in {
+            display: block!important;
+        }
+        .collapsing {
+            overflow: hidden!important;
+        }
+        .carousel-caption {
+            right: 20%;
+            max-width: 60%;
+            left: 20%;
+        }
+    }
+    
+    @media (max-width: 813px) {
+        .brand-right {
+            display: none;
+        }
+        .site-title {
+            width: 80vw
+        }
+    }
+    
+    @media (max-width: 590px) {
+        .brand {
+            height: 90px;
+        }
+        .brand-txt {
+            height: 90px;
+        }
+        .brand-txt h1 {
+            font-size: 2em;
+        }
+        .brand-txt h2 {
+            font-size: 1em;
+        }
+        .site-title {
+            padding-left: 40px;
+        }
+        .carousel-caption {
+            right: 10%;
+            max-width: 80%;
+            left: 10%;
+        }
+    }
+    
+    @media (max-width: 500px) {
+        #rndpic-a:nth-child(n+6) {
+            display: none;
+        }
+        .photo-gallery {
+            width: 280px;
+        }
+        .facebook-embed {
+            width: 90%;
+        }
     }
